# rustly

./: .editorconfig  .gitignore  Cargo.toml  README.md  hello.txt  justfile
rust_tutorial/: Cargo.toml
rust_tutorial/src/: calculator.rs  closure.rs  day.rs  factorial.rs  main.rs  shape.rs
src/: aggregator.rs  args.rs  article.rs  bank.rs  calculator.rs  color.rs  config.rs  customer.rs  day.rs  file.rs  guess.rs  input.rs  json.rs  main.rs  math.rs  parser.rs  random.rs  shape.rs  string.rs  transliterate.rs
src/accounting/: bank.rs  calculator.rs  customer.rs  debitcard.rs  mod.rs
src/algorithms/: sort.rs
src/dates/: clock.rs  date.rs  day.rs  mod.rs
src/encoders/: base64.rs
src/generators/: mod.rs  random.rs
src/generics/: closure.rs  mod.rs  shape.rs
src/hashers/: hashmap.rs
src/iterators/: mod.rs  palindrome.rs  password.rs
src/math/: counter.rs  math.rs  mod.rs  operations.rs
src/metadata/: parser.rs
src/parsers/: config.rs
src/pointers/: mod.rs  mybox.rs
src/scoping/: mod.rs  raii.rs
src/standard/: file.rs
src/system/: info.rs
src/threads/: spawn.rs
src/transformers/: cbor.rs  color.rs  json.rs  mod.rs  string.rs  transliterate.rs
