[package]
name = "rustly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.23"
env_logger = "0.10.0"
rexiv2 = "0.10.0"
kamadak-exif = "0.5.5"
serde_json = "1.0.103"
serde = { version = "1.0.174", features = ["derive"] }
features = "0.10.0"
derive = "1.0.0"
walkdir = "2.3.3"
glob = "0.3.1"
