[package]
name = "rustly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.38"
env_logger = "0.11.3"
kamadak-exif = "0.5.5"
serde_json = "1.0.103"
serde = { version = "1.0.174", features = ["derive"] }
features = "0.10.0"
derive = "1.0.0"
walkdir = "2.3.3"
glob = "0.3.1"
sysinfo = "0.30.7"
ciborium = "0.2.2"
num-bigint = "0.4.6"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
