[package]
name = "rustly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
ciborium = "0.2.2"
clap = { version = "4.5.18", features = ["derive"] }
derive = "1.0.0"
env_logger = "0.11.3"
features = "0.10.0"
glob = "0.3.1"
kamadak-exif = "0.5.5"
num-bigint = "0.4.6"
rand = "0.8.5"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
sysinfo = "0.30.7"
walkdir = "2.3.3"
base64 = "0.13.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
